--- a/04-css-llama/style.css
+++ b/04-css-llama/style.css
@@ -1,4 +1,14 @@
-
+<style>
+  #container {background-color:white; margin:10px; height:300px;position:relative;}
+  #images/llama1.png {float:left;} 
+  #Lorem-Aliquam-erat-volutpat {position:absolute;top:0;left:0;padding:10px;width:24px;}
+.By-Frank-Doe {color:light-gray; width:12px:position:top:0;left:0;}
+  .article {padding:10px;position:absolute;top:0;left:0;}
+#images/llama2.png {float:right;} 
+ #Lorem-Ipsum {position:absolute;top:0;right:0;padding:10px;width:24px;}
+.By-Frank-Doe {color:light-gray; width:12px:position:top:0;left:0;}
+.article {padding:10px;position:absolute;top:0;left:0;}
+</style>
 
 /* Meyer Reset */
 /* http://meyerweb.com/eric/tools/css/reset/ 
