--- a/04-css-llama/style.css
+++ b/04-css-llama/style.css
@@ -1,14 +1,4 @@
-<style>
-  #container {background-color:white; margin:10px; height:300px;position:relative;}
-  #images/llama1.png {float:left;} 
-  #Lorem-Aliquam-erat-volutpat {position:absolute;top:0;left:0;padding:10px;width:24px;}
-.By-Frank-Doe {color:light-gray; width:12px:position:top:0;left:0;}
-  .article {padding:10px;position:absolute;top:0;left:0;}
-#images/llama2.png {float:right;} 
- #Lorem-Ipsum {position:absolute;top:0;right:0;padding:10px;width:24px;}
-.By-Frank-Doe {color:light-gray; width:12px:position:top:0;left:0;}
-.article {padding:10px;position:absolute;top:0;left:0;}
-</style>
+
 
 /* Meyer Reset */
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -83,9 +73,38 @@ table {
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
-/* logo replacement */
 
-header#site-header h1 { position:absolute; left:10px; top:10px; }
-header#site-header h1 a { display:block; width:200px; height:200px; background:url(images/logo.png) top center no-repeat; text-indent:-9999px; }
+#main-content{
+	position:relative;
+	margin: 0 auto; 
+	width:960px;}
+	
+img{
+	float:left;
+	width:40%;
+	margin:15px 10px 10px 20px;}
+	
+article	{
+	float:left;
+	width:50%;
+	margin:20px 0px;}
+	
+	h1{
+	font:1.2em/1.2em"georgia";
+	font-weight:bold;
+	margin:10px 20px;
+	text-align:left;}
+	
+	h2{
+		font:italic 0.7em/0.7em verdana,san-serif;
+		color:light-gray; 
+		margin:10px 20px; 
+		text-align:left;}
+		
+	p{font:0.75em/1.5em verdana,san-serif; 
+		text-transform:capitalize;
+		margin:10px 20px;
+		text-align:left;}
+
 
 
