--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -73,12 +73,43 @@ table {
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
-  #images/dogvscat-logo.gif{position:static;} 
-  #top-menu {position:relative;top:20px;left:-20px;padding:10px;width:24px;}
-.ul{color:gray; width:12px:position:absolute;top:20px;left:-20px;margin:12px}
-#images/blackandwhitecolorpuppy.jpg{float:left;}
- .article {padding:10px;position:absolute;top:0;left:0;} 
-#images/blackandwhitecolorcat.jpg {float:right;} 
- #Dogs-Have-Better-Noses{position:absolute;top:36px;left:0;padding:10px;width:24px;}
-#Cats-Have-Better-Tongues{position:absolute;top:36;right:0;padding:10px;width:24px;}
-.article {padding:10px;position:absolute;top:0;left:0;}
+
+body{
+	position:relative;
+	margin: 0 auto; 
+	width:960px;
+	background-color: blue;}
+	
+.menu{
+	position:absolute;
+	top:100px;
+	left:40px;
+	margin:10px;
+	width:1.2em;}
+	
+img{
+	float:left;
+	width:45%;
+	margin:15px 10px 10px 20px;}
+	
+article	{
+	float:left;
+	width:50%;
+	margin:20px 0px;}
+	
+	h1{
+	font:1.2em/1.2em"georgia";
+	font-weight:bold;
+	margin:10px 20px;
+	text-align:left;}
+	
+		
+	p{
+	font:0.75em/1.5em verdana,san-serif; 
+		text-transform:capitalize;
+		margin:10px 20px;
+		text-align:left;}
+		
+		
+footer {clear:both;}
+
