--- a/07-css-robots/style.css
+++ b/07-css-robots/style.css
@@ -78,42 +78,40 @@ body{
 	position:relative;
 	margin: 0 auto; 
 	width:960px;
-	height:853px;
-	background-color: white;}
+	background-color: grey;}
 	
-	img src="images/dogvscat-logo.gif"{
-	position:relative;
-	top:0;
-	left:300px;
-	margin:15px 10px 10px 20px;}
+	#site-wrapper {
+	background-color:#fot5db;}
 	
-#top-menu{
-	position:relative;
+	#site-header h1 a{
+	display:block; 
+	height:125px;
+	width:300px;
+	background:url(image/logo.png) 
+	no-repeat top left;
+	text-indent-9999px;}
+	
+	
+#top-nav{
+	position:absolute;
 	top:10px;
-	left:0;
-	width:960px;
-	height:40px;
-	background-color:blue}
-	
-	#top-menu.li a{ display:block;
-	padding:15px 20px;
-    font-size:18px;
-    color:white;
-    text-decoration:none;}
+	left:675px;
+	color:#744918;}
 	
 article	{
 	float:left;
 	width:40%;
 	margin:20px 0px;}
 	
-	img-article{
-	float:left;
-	width:50%;
-	margin:10px 20px;
-	padding:10px;}
-	
 	h1{
-	font:1.4em/1.4em"georgia";
+	font:1.8em/1.8em"georgia";
+	font-weight:bold;
+	font-style:italic
+	margin:10px 20px;
+	text-align:left;}
+	
+	h2{
+	font:1.2em/1.2em"georgia";
 	font-weight:bold;
 	margin:10px 20px;
 	text-align:left;}
