updates hw6 and 7

--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -98,8 +98,7 @@ body{
 	#top-menu.li a{ display:block;
 	padding:15px 20px;
     font-size:18px;
-    color:white;
-    text-decoration:none;}
+    color:white;}
 	
 article	{
 	float:left;
