--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -81,36 +81,40 @@ body{
 	height:853px;
 	background-color: white;}
 	
-	img src="images/dogvscat-logo.gif"{
+	img{
 	position:relative;
 	top:0;
-	left:300px;
+	left:200px;
 	margin:15px 10px 10px 20px;}
+	
 	
 #top-menu{
 	position:relative;
 	top:10px;
-	left:0;
+	left:160px;
 	width:960px;
-	height:40px;
-	background-color:blue}
+	height:50px;}
 	
-	#top-menu.li a{ display:block;
-	padding:15px 20px;
+	#top-menu li { 
+    float:left; 
+    border-right:
+    1px solid #CCC;}
+  
+  #top-menu li.last { border:0px; }
+  
+  #top-menu li a { display:block; 
+    padding:15px 20px;
     font-size:18px;
-    color:white;
+    color:black;
     text-decoration:none;}
+    
+  #top-menu li a:hover { 
+  background-color:#DDD; }
 	
 article	{
 	float:left;
 	width:40%;
 	margin:20px 0px;}
-	
-	img-article{
-	float:left;
-	width:50%;
-	margin:10px 20px;
-	padding:10px;}
 	
 	h1{
 	font:1.4em/1.4em"georgia";
@@ -126,4 +130,9 @@ article	{
 		
 		
 footer {clear:both;}
+position:relative;
+	top:10px;
+	left:0;
+	width:960px;
+	height:60px;}
 
