--- a/07-css-robots/style.css
+++ b/07-css-robots/style.css
@@ -156,7 +156,7 @@ background-color: white;}
 	padding-top:5px;}
 	
   #page p{
-	font-size:16px; 
+	font-size:0.75em/1.5em; 
 	font-family:georgia; 
 		margin:10px 20px;}
 		
