--- a/07-css-robots/style.css
+++ b/07-css-robots/style.css
@@ -196,16 +196,16 @@ font:0.875em/1.75em georgia,san-serif;
   margin:0 auto;
   position:relative;}
   
-  #site-footer h1{
+  #site-footer{
   color:white;
-  font:0.875em/1.75em georgia,san-serif;}
+  font-size:16px;
+font-family:georgia;}
 		
   #footer-contact{
   position:absolute;
   left:0;
   top:10px;
   width:500px;
-  font:0.75em/1.5em georgia,san-serif;
   margin:10px 20px;}
   
   #footer-follow{
