--- a/07-css-robots/style.css
+++ b/07-css-robots/style.css
@@ -205,8 +205,7 @@ font-family:georgia;}
   position:absolute;
   left:0;
   top:10px;
-  width:500px;
-  margin:10px 20px;}
+  width:500px;}
   
   #footer-follow{
   position:absolute;
