--- a/07-css-robots/style.css
+++ b/07-css-robots/style.css
@@ -205,7 +205,8 @@ font-family:georgia;}
   position:absolute;
   left:0;
   top:10px;
-  width:500px;}
+  width:500px;
+  margin:10px 20px;}
   
   #footer-follow{
   position:absolute;
