--- a/10-type-cats-vs-dogs copy/style.css
+++ b/10-type-cats-vs-dogs copy/style.css
@@ -96,7 +96,9 @@ body{
 	height:50px;}
 	
 	#top-menu li { 
-    float:left; }
+    float:left; 
+    border-right:
+    1px solid #CCC;}
   
   #top-menu li.last { border:0px; }
   
