--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -90,8 +90,7 @@ body{
 	
 #top-menu{
 	position:relative;
-	top:10px;
-	left:160px;
+	margin:0 auto;
 	width:960px;
 	height:50px;}
 	
@@ -129,7 +128,7 @@ img.dog{
 	article.cat	{
 	float:right;
 	width:50%;
-	margin:20px 0px;}
+	margin:25px 0px;}
 	
 	h1{
 	font:1.4em/1.4em"georgia";
