--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -83,9 +83,8 @@ body{
 	
 	img.logo{
 	position:relative;
-	top:0;
-	left:200px;
-	margin:15px 10px 10px 20px;}
+	width:445px;
+	margin:0 auto;}
 	
 	
 #top-menu{
