--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -83,18 +83,22 @@ body{
 	
 	img.logo{
 	position:relative;
-	margin:0 auto;
-	width:445px;}
+	top:0;
+	left:200px;
+	margin:15px 10px 10px 20px;}
 	
 	
 #top-menu{
 	position:relative;
-	margin:0 auto;
+	top:10px;
+	left:160px;
 	width:960px;
 	height:50px;}
 	
 	#top-menu li { 
-    float:left; }
+    float:left; 
+    border-right:
+    1px solid #CCC;}
   
   #top-menu li.last { border:0px; }
   
@@ -127,7 +131,7 @@ img.dog{
 	article.cat	{
 	float:right;
 	width:50%;
-	margin:25px 0px;}
+	margin:20px 0px;}
 	
 	h1{
 	font:1.4em/1.4em"georgia";
