--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -96,9 +96,7 @@ body{
 	height:50px;}
 	
 	#top-menu li { 
-    float:left; 
-    border-right:
-    1px solid #CCC;}
+    float:left;}
   
   #top-menu li.last { border:0px; }
   
