--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -86,13 +86,6 @@ body{
 	top:0;
 	left:200px;
 	margin:15px 10px 10px 20px;}
-	
-	#site-wrapper{
-	position:relative;
-	top:0;
-	left:160px;
-	width:960px;
-	background-color:black;}
 		
 #top-menu{
 	position:relative;
@@ -102,7 +95,8 @@ body{
 	height:50px;}
 	
 	#top-menu li { 
-    float:left;}
+    float:left;
+    border-top:3px solid #CCC;}
   
   #top-menu li.last { border:0px; }
   
