--- a/06-css-cats-vs-dogs/style.css
+++ b/06-css-cats-vs-dogs/style.css
@@ -92,12 +92,13 @@ body{
 	top:10px;
 	left:160px;
 	width:960px;
-	height:50px;}
+	height:50px;
+	border-top:3px solid #CCC;
+    border-bottom:3px solid #CCC;}
 	
 	#top-menu li { 
     float:left;
-    border-top:3px solid #CCC;
-    border-bottom:3px solid #CCC;}
+    }
   
   #top-menu li.last { border:0px; }
   
