--- a/11-final/style.css
+++ b/11-final/style.css
@@ -75,42 +75,53 @@ html[xmlns] .clearfix { display: block; }
 
 
 body{
-	background-color: white;
-	max-width:100%;}
+	background-color: #cccccc;
+	width:1050px;
+	margin:0 auto;}
 	
 	#site-header{
-	width:100%;
-	max-width:960px;
+	width:1050px;
 	margin:0 auto;
 	position:relative;}
+	
+	h1{
+	position:relative;
+	margin: 0 auto;
+	font-size:60px;
+	font-family:georgia;
+	font-weight:bold;
+	color:grey;
+	padding-bottom:20px;
+	padding-top:20px;
+	padding-left:250px;}
 	
 	img.logo{
 	position:relative;
 	margin: 0 auto; 
-	width:50%;
-	height:6%;
-	padding-bottom:4%;
-	padding-top:2%;
-	padding-left:2.5%;}
+	width:350px;
+	height:105px;
+	padding-bottom:20px;
+	padding-top:20px;
+	padding-left:250px;}
 		
 #top-menu{
 	position:relative;
 	margin: 0 auto;
-	width:100%;
-	max-width:960px;
-	height:auto;
-	border-top:3px solid #CCC;}
+	width:1050px;
+	height:40px;
+	border-top:3px solid #f7eeaf;
+    border-bottom:3px solid #f7eeaf;}
 	
 	#top-menu li { 
- float:left;
- padding-left:2.5%;}
+ 	float:left;
+ 	padding-left:30px;}
   
   #top-menu li.last { border:0px; }
   
-  #top-menu li a { 
-  display:block; 
- padding:2% 4% 0 2%;
-    font-size:1.6em;
+  #top-menu li a { display:block; 
+ 
+    padding:10px 20px 0 10px;
+    font-size:24px;
     color:grey;
     text-decoration:none;
     text-transform:uppercase;
@@ -119,68 +130,43 @@ body{
   #top-menu li a:hover { 
   background-color:#DDD; }
 	
-	#content{
-	width:100%;
-	max-width:960px;
-  	margin:0 auto;}
+	#content{	
+	width:1050px;
+  	margin:0 auto;
+  	background-color:#f7eeaf;}
   	
-  	#dog{
-  	float:left;
-  	padding-top:5%;
-  	padding-bottom:5%;
-  	width:45%;}
-  	
-  	img.dog{
-	float:left;
-	width:103%;
-	padding-top:1%;
-	padding-bottom:2%;}
-  	
-  	#cat{
-  	float:right;
-  	padding-top:5%;
-  	padding-bottom:5%;
-  	width:45%;}
-  	
-  	img.cat{
-	float:right;
-	width:100%;
-	padding-top:1%;
-	padding-bottom:2%;}
-	
 	h1{
-	font-size:2.0em;
+	font-size:30px;
 	font-family:georgia;
 	font-weight:bold;
-	color:black;
-	padding-top:5%;}
+	color:#474444;
+	padding-top:5px;}
 		
 	p{
-	font-size:1.4em;
+	font-size:16px;
 	font-family:georgia;
-	color:black;
-	padding-top:1%;
-	padding-bottom:1%;}
+	color:#DDD;
+	padding-top:10px;
+	padding-bottom:10px;}
 		
   #site-footer{
-  width:100%;
-  max-width:960px;
+  width:1050px;
   margin:0 auto;
   position:relative;
-  padding-top:3%;
+  padding-top:30px;
   color:grey;
-  font-size:1.4em;
+  font-size:16px;
 font-family:georgia;
 clear:both;
  border-top:3px solid #CCC;}
 
 #footer-credit{
  float:left;
- padding-right:6%;}
+ padding-right:60px;}
 
 #footer-copyright{
 float:right;
- padding-left:6%;}
+ padding-left:60px;}
  
 
 
