--- a/11-final/style.css
+++ b/11-final/style.css
@@ -239,13 +239,13 @@ font-family:georgia;
 clear:both;
  border-top:3px solid #CCC;}
 
-#footer-credit{
+#footer-follow {
  float:left;
- padding-right:60px;}
+ padding-right:2%;}
 
 #footer-copyright{
 float:right;
- padding-left:60px;}
+ padding-left:2%;}
  
 
 
